# poor-code

./: .gitignore  AGENTS.md  HANDSOFF.md  pyproject.toml
.claude/agents/: claude-code-ux-reviewer.md
bench/: README.md  _diag.sh  gemma-diag-report.json  gemma-prompt-dump.BEFORE.txt  gemma-prompt-dump.txt  install.sh  oracle-honesty-2026-06-14.sh  poor_code_agent.py  run-full15-postfix-2026-06-14.sh  run-gemma-v2-15task-2026-06-14.sh  run-gemma-v2-2026-06-14.sh  run-gemma-v2-resume-2026-06-14.sh  run-judge-2026-06-13.sh  run-lean-2026-06-13.sh  run-nano-2026-06-12.sh  run-nano-full15-2026-06-14.sh  run-verifier-diag-2026-06-14.sh
docs/: poor-code-philosophy.md
scripts/: generate_models.py  harness_locator_demo.py  harness_loop_demo.py
src/poor_code/: __init__.py  __main__.py  app.py  cli.py  extensions.py  messages.py
tests/: test_app_conclusion.py  test_cli_wiring.py  test_extension_dogfood.py  test_extensions_surface.py  test_messages.py  test_messages_harness_events.py  test_messages_observability.py  test_on_step_wiring.py
tests/bench/: test_poor_code_agent.py
tests/domain/: test_agent.py  test_agent_session_wiring.py  test_echo_agent.py  test_llm_schema.py
tests/infra/: fakes.py  test_auth_store.py  test_context_loader.py  test_git.py  test_paths.py  test_prompt_builder.py  test_settings.py  test_system_prompt.py  test_turn_assembler.py
tests/integration/: test_ollama_cloud_live.py  test_project_map_boot.py
tests/provider/: fakes.py  test_auth.py  test_build_body_capabilities.py  test_capabilities.py  test_client.py  test_events.py  test_framing.py  (+10 more)
(+349 files in other folders)
