[project]
name = "poor-code"
version = "0.1.0"
description = "A TUI coding agent built for small/weak models — structure compensates for capability."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.7",
]

[project.scripts]
poor-code = "poor_code.cli:main"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poor_code"]
